fix: on product page fix overflow horizont

--- a/styles/products-page/style.css
+++ b/styles/products-page/style.css
@@ -11,6 +11,12 @@ html {
   scroll-behavior: smooth;
 }
 
+.body-container {
+  overflow-x: hidden;
+  max-width: 1440px;
+  position: relative;
+}
+
 a {
   outline: none;
   text-decoration: none;
