--- a/modals/styles/modal.css
+++ b/modals/styles/modal.css
@@ -126,7 +126,7 @@
 }
 
 .modal__card .modal__info p {
-  margin: 0;
+  margin: 0 0 0 10px;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
@@ -159,6 +159,28 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 25px;
+}
+
+@media (max-width: 360px) {
+  .modal__card .modal__price {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 0px;
+  }
+  .modal__card .modal__price .modal__info {
+    margin: 10px 0;
+  }
+  .modal__card .modal__price a {
+    margin: 10px 0;
+  }
 }
 
 .modal__card .modal__price .modal__button_order {
