--- a/modals/styles/modal.scss
+++ b/modals/styles/modal.scss
@@ -122,7 +122,7 @@
         
         }
         p {
-            margin: 0;
+            margin: 0 0 0 10px;
             font-family: 'Montserrat';
             font-style: normal;
             font-weight: 500;
@@ -145,6 +145,20 @@
         align-items: center;
         justify-content: space-between;
         margin-bottom: 25px;
+
+        @media (max-width: 360px) { //*temp 25.12
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            margin-bottom: 0px;
+            .modal__info {
+                margin: 10px 0;
+            }
+            a {
+                margin: 10px 0;
+            }
+            
+        }
 
         .modal__button_order {
             width: 100px;
