--- a/styles/main-page/style.css
+++ b/styles/main-page/style.css
@@ -279,7 +279,7 @@ a:visited {
 
 @media (max-width: 578px) {
   .main_screen__title {
-    margin-top: 127px;
+    margin-top: 0px;
     margin-left: auto;
   }
 }
@@ -382,8 +382,8 @@ a:visited {
             align-items: center;
     -ms-flex-line-pack: center;
         align-content: center;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(116, 114, 114, 0.5)), to(rgba(0, 0, 0, 0.4))), url("../../assets/images/main_background.png");
-    background-image: linear-gradient(rgba(116, 114, 114, 0.5), rgba(0, 0, 0, 0.4)), url("../../assets/images/main_background.png");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(116, 114, 114, 0.5)), to(rgba(0, 0, 0, 0.4))), url("../../assets/images/main_bg_mobile.jpg");
+    background-image: linear-gradient(rgba(116, 114, 114, 0.5), rgba(0, 0, 0, 0.4)), url("../../assets/images/main_bg_mobile.jpg");
   }
 }
 
@@ -584,13 +584,16 @@ a:visited {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
   margin-bottom: 45px;
 }
 
+.my-products__buttons > * + * {
+  margin-left: 30px;
+}
+
 @media (max-width: 767px) {
-  .my-products__buttons {
-    gap: 15px;
+  .my-products__buttons > * + * {
+    margin-left: 15px;
   }
 }
 
@@ -615,7 +618,30 @@ a:visited {
   .my-products__button {
     width: 90px;
     font-size: 13px;
-    padding: 2px 0;
+    padding: 3px 0;
+  }
+}
+
+.my-products__katalog {
+  padding: 5px 20px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  /* identical to box height, or 119% */
+  letter-spacing: 0.1em;
+  color: #000000;
+  border: none;
+  background: #e4eaea;
+  -webkit-box-shadow: 5px 5px 15px #dddbdb;
+          box-shadow: 5px 5px 15px #dddbdb;
+}
+
+@media (max-width: 767px) {
+  .my-products__katalog {
+    font-size: 13px;
+    padding: 3px 15px;
   }
 }
 
@@ -867,6 +893,12 @@ a:visited {
   line-height: 19px;
   /* or 136% */
   color: #000000;
+}
+
+@media (max-width: 376px) {
+  .footer .footer__text p {
+    text-align: center;
+  }
 }
 
 .footer .logo_link {
