--- a/styles/products-page/style.css
+++ b/styles/products-page/style.css
@@ -678,7 +678,7 @@ a:visited {
   color: #000000;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 376px) {
   .footer .footer__text p {
     text-align: center;
   }
@@ -876,12 +876,14 @@ a:visited {
   right: 0;
   bottom: 0;
   z-index: -3;
+  overflow: hidden auto;
 }
 
 .modal__card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 10px 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -1014,7 +1016,7 @@ a:visited {
   margin-bottom: 25px;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 376px) {
   .modal__card .modal__price {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
